--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ant-design/pro-layout": "^6.5.0",
     "@umijs/preset-react": "1.x",
     "antd": "^4.10.2",
+    "axios": "^0.21.1",
     "redux-logger": "^3.0.6",
     "umi": "^3.3.5"
   },
