--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@umijs/preset-react": "1.x",
     "antd": "^4.10.2",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "redux-logger": "^3.0.6",
     "umi": "^3.3.5"
   },
